<resources>
    <string name="app_name">Projet_vente_voiture</string>

    <string-array name="critere">
        <item>item0</item>
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
        <item>item5</item>
        <item>item6</item>
        <item>item7</item>
        <item>item8</item>
        <item>item9</item>
    </string-array>

    <string name="vente">Vente</string>
    <string name="loc">Location</string>

    <string-array name="type">
        <item>@string/vente</item>
        <item>@string/loc</item>
    </string-array>

    <string name="h">Heure</string>
    <string name="d">Jour</string>
    <string name="w">Semaine</string>
    <string name="m">Mois</string>

    <string-array name="temps">
        <item>@string/h</item>
        <item>@string/d</item>
        <item>@string/w</item>
        <item>@string/m</item>
    </string-array>
</resources>