<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/text_view_connexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="AJOUTER ANNONCE"
            android:gravity="center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_view_type_ajouter_annonce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type d'annonce "/>

            <RadioGroup
                android:id="@+id/radio_group_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/radio_button_vente_ajouter_annonce">

                <RadioButton
                    android:id="@+id/radio_button_vente_ajouter_annonce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vente"/>

                <RadioButton
                    android:id="@+id/radio_button_location_ajouter_annonce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loc" />
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_view_titre_ajouter_annonce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Titre"/>
            <EditText
                android:id="@+id/edit_text_titre_ajouter_annonce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_view_lieu_ajouter_annonce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lieu"/>
            <EditText
                android:id="@+id/edit_text_lieu_ajouter_annonce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/dynamique_linear_layout_criteres_ajouter_annonce"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_view_description_ajouter_annonce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description"/>
            <EditText
                android:id="@+id/edit_text_description_ajouter_annonce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:inputType="textMultiLine"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_view_prix_ajouter_annonce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Prix"/>
            <EditText
                android:id="@+id/edit_text_prix_ajouter_annonce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/ll_temps_ajouter_annonce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_view_temps_ajouter_annonce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Temps unitaire "/>

            <RadioGroup
                android:id="@+id/radio_group_temps_ajouter_annonce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/radio_button_heure_ajouter_annonce">

                <RadioButton
                    android:id="@+id/radio_button_heure_ajouter_annonce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/h" />

                <RadioButton
                    android:id="@+id/radio_button_jour_ajouter_annone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/d" />

                <RadioButton
                    android:id="@+id/radio_button_semaine_ajouter_annone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/w" />

                <RadioButton
                    android:id="@+id/radio_button_mois_ajouter_annonce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/m" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_view_photo_ajouter_annonce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Photos"/>
            <Button
                android:id="@+id/button_parcourir_photo_ajouter_annonce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Parcourir" />
            <Button
                android:id="@+id/button_prendre_photo_ajouter_annonce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Prendre photo" />

        </LinearLayout>

        <TableLayout
            android:id="@+id/table_photo_ajouter_annonce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TableLayout>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/dynamique_linear_layout_photos_ajouter_annonce"/>-->

        <Button
            android:id="@+id/button_validation_ajouter_annonce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Validation" />
    </LinearLayout>
</ScrollView>